   command for a protocol equivalent of sending a `SIGTERM`, e.g. when
   a newer instance of the driver program tries to start. [#1903, #2392]

 - A new `NUT_QUIET_INIT_BANNER` envvar (presence or "true" value) can now
   prevent the tool name and NUT version banner from being unilaterally
   printed out when NUT programs start. [issues #1789 vs. #316; #2573]

 - Extended `upsdrvctl` with a `list` operation (or `-l` option) to report
   manageable device configuration names (possible `<ups>` arguments to
   `start`, `stop` etc. operations), or to confirm a single name that it
   is known, and a `status` operation for more information. [#2567]

 - riello_ser updates:
   * added `localcalculation` option to compute `battery.runtime` and
     `battery.charge` if the device provides bogus values [issue #2390,
     following in the footsteps of #1692, #1685 done for `riello_usb`]
     (similar to `runtimecal` in some other drivers, may be refactored
     to that configuration and logic model in later NUT releases)

 - added Visench C1K (using serial port converter with USB ID `1a86:7523`)
   as known supported by `nutdrv_qx` (Megatec protocol) since at least
   NUT v2.7.4 release [#2395]

 - usbhid-ups updates:
   * Support of the `onlinedischarge_log_throttle_hovercharge` in the NUT
     v2.8.2 release was found to be incomplete. [#2423, follow-up to #2215]
   * Added support for `lbrb_log_delay_sec=N` setting to delay propagation of
     `LB` or `LB+RB` state (buggy with APC BXnnnnMI devices circa 2023-2024).
     This may work better with flags like `onlinedischarge_calibration` and
     `lbrb_log_delay_without_calibrating` for some devices. [#2347]
   * General suggestion from `possibly_supported()` message method for devices
     with VendorID=`0x06da` (Phoenixtec), seen in some models supported by
     MGE HID or Liebert HID, updated to suggest trying `nutdrv_qx`. [#334]
   * MGE HID list of `mge_model_names[]` was extended for Eaton 9E, 5PX and 5SC