@@ -47,6 +47,7 @@ PartOf=nut-driver.target
 
 [Service]
 Environment=NUT_IGNORE_NOWAIT=true
+Environment=NUT_QUIET_INIT_NDE_WARNING=true
 EnvironmentFile=-@CONFPATH@/nut.conf
 SyslogIdentifier=%N
 ExecStartPre=-@SYSTEMD_TMPFILES_PROGRAM@ --create @systemdtmpfilesdir@/nut-common-tmpfiles.conf
