@@ -51,6 +51,8 @@ if @SBINDIR@/upsmon -K >/dev/null 2>&1; then
             echo "$0: Commanding UPSes (if any) to shutdown" >&2
             [ -w /dev/console ] && echo "`TZ=UTC LANG=C date`: $0: Commanding UPSes (if any) to shutdown" >/dev/console || true
         }
+        NUT_QUIET_INIT_NDE_WARNING=true
+        export NUT_QUIET_INIT_NDE_WARNING
         @SBINDIR@/upsdrvctl shutdown || echo "$0: Something failed about UPS shutdown commands" >&2
     fi
 
