@@ -97,6 +97,13 @@ https://github.com/networkupstools/nut/milestone/11
    prevent the tool name and NUT version banner from being unilaterally
    printed out when NUT programs start. [issues #1789 vs. #316; #2573]
 
+ - The `upsdrvctl` should now warn if executed on systems where NUT was
+   built with support for service management frameworks like systemd or SMF,
+   so nut-driver service units prepared by `nut-driver-enumerator` would
+   conflict with manually-executed driver programs. This warning can be
+   hushed by exporting a `NUT_QUIET_INIT_NDE_WARNING` environment variable
+   with any value.
+
  - Extended `upsdrvctl` with a `list` operation (or `-l` option) to report
    manageable device configuration names (possible `<ups>` arguments to
    `start`, `stop` etc. operations), or to confirm a single name that it
